src/main/java/org/example/design/solid/liskov/good/Flyable.java
package org.example.design.solid.liskov.good;

public interface Flyable {
    void fly();
}
